Fixed dark mode well colors.

--- a/frontend/styles/layout/_layout.scss
+++ b/frontend/styles/layout/_layout.scss
@@ -320,4 +320,13 @@ body.dark {
 			color: $dark-link-hover-color;
 		}
 	}
+
+	//
+	// wells
+	//
+
+	.well {
+		background-color: colors.$very-dark-grey;
+		border-color: colors.$dark-grey;
+	}
 }
