--- a/frontend/styles/layout/_search-bar.scss
+++ b/frontend/styles/layout/_search-bar.scss
@@ -89,7 +89,6 @@ $border-color: colors.$very-very-light-grey;
 
 				i {
 					margin: 0;
-					color: white;
 				}
 
 				& + button {
